[package]
name = "anchor-mpl"
version = "0.1.0"
authors = ["Caleb Everett <caleb@calebeverett.io>"]
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[lib]

[features]
default = ["token_metadata"]
token_metadata = ["mpl-token-metadata"]

[dependencies]
anchor-lang = { version = "0.21.0", features = ["derive"] }
mpl-token-metadata = { version = "1.2.4", optional = true, features = ["no-entrypoint"] }
